[package]
name = "ipfs"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]

[dependencies]

libp2p-core = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
libp2p-ping = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
libp2p-tcp-transport = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
libp2p-mplex = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
libp2p-identify = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
libp2p-peerstore = {git = "https://github.com/libp2p/rust-libp2p", branch = "master"}
rand = "0.4"
tokio-core = "*"
futures = "*"
bytes = "0.4"
tokio-io = "*"
